refactor(LotteryTickets): tickets을 add하여 추가하는 방식으로 수정